# tams_pr2_refine_startup_calibration

./: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
config/: pr2_calibration_controllers_for_refine.yaml  pr2_calibration_controllers_slow.yaml  pr2_set_zero_offset_controllers.yaml
launch/: refine_pr2.launch
python/: PlotWindow.py  monitor_zero_offset.py  plot_zero_offsets.py  refine_startup_calibration.py  zero_offset_histogram.py
scripts/: hold_position.sh  plot_zero_offsets  refine_startup_calibration  refine_startup_calibration.sh  rerun_calibration_slow.sh  start_set_zero_offset_controllers.sh  start_trajectory_controllers.sh  stop_controllers.sh  stop_set_zero_offset_controllers.sh  unload_helper_controllers.sh
src/: set_zero_offset_controller.cpp
srv/: GetZeroOffset.srv  SetZeroOffset.srv
