<?xml version="1.0"?>
<package format="2">
  <name>tams_pr2_refine_startup_calibration</name>
  <version>0.0.0</version>
  <description>The tams_pr2_refine_startup_calibration package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pr2_controller_interface</depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>

</package>
